[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pomaidb"
version = "0.1.0"
description = "Embedded vector database for Edge AI — in-process, crash-safe, C API with ctypes"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "PomaiDB contributors" }]
keywords = ["vector", "embedding", "database", "hnsw", "embedded", "edge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["numpy", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pomaidb*"]
